K8S/prometheus-cluster/core/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "monitoring"
  name: "prometheus-cluster"
spec:
  rules:
    - host: "alertmanager.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "alertmanager"
                port:
                  number: 9093
    - host: "grafana.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "grafana"
                port:
                  number: 3000
    - host: "prometheus.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "prometheus"
                port:
                  number: 9090
